<resources>
    <string name="app_name">Sound Board</string>
    <string name="main_akey">A</string>
    <string name="main_bkey">B</string>
    <string name="main_bflat">B♭</string>
    <string name="main_ckey">C</string>
    <string name="main_csharpkey">C♯</string>
    <string name="main_dkey">D</string>
    <string name="main_dsharpkey">D♯</string>
    <string name="main_ekey">E</string>
    <string name="main_fkey">F</string>
    <string name="main_fsharpkey">F♯</string>
    <string name="main_gkey">G</string>
    <string name="main_ghsarpkey">G♯</string>
    <string name="main_song1">twinkle twinkle</string>
    <string name="main_song2">halloween chaos</string>
    <string name="main_song3">special note ;)</string>
    <string name="main_scale">scale</string>
    <string name="main_record">record</string>
    <string name="main_playBack">playback</string>
</resources>
